<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/new_session"
            android:textSize="26sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_newSessionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:hint="@string/session_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_newSessionUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText_newSessionName"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/session_user"
                android:textSize="14sp" />

            <Space
                android:id="@+id/space_dialog"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_below="@+id/editText_newSessionUser" />

            <Button
                android:id="@+id/button_dialogCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space_dialog"
                android:layout_marginStart="4dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_dialogStartSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button_dialogCancel"
                android:layout_alignBottom="@+id/button_dialogCancel"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                android:text="@string/start_session" />

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
