<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/end_session_question_mark"
            android:textSize="26sp" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"

    android:text="@string/end_session_text_upload"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <Button
                android:id="@+id/button_dialogCancelStopSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/colorAccent"
                android:layout_alignParentStart="true"

                />

            <Button
                android:id="@+id/button_dialogStopSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/end_session"
                android:backgroundTint="@color/red"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
